# mealpedant_backup_pi

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  _typos.toml  create_release.sh  docker-compose.yml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-body.md
.github/workflows/: create_release.yml
src/: app_env.rs  app_error.rs  cron.rs  main.rs
src/cron/: mod.rs
src/env/: mod.rs
src/word_art/: font.rs  mod.rs
src/ws/: connect.rs  connection_details.rs  mod.rs  ws_sender.rs
src/ws_messages/: incoming.rs  outgoing.rs
