[package]
name = "mealpedant_backup_pi"
version = "0.1.9"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
repository = "https://www.github.com/mrjackwills/mealpedant_backup_pi"
description = "mealpedant backup pi client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
pedantic = "warn"
nursery = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown= "allow"
similar_names = "allow"

[dependencies]
data-encoding = "2.5"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", default-features=false, features = ["brotli", "gzip", "json", "rustls-tls-native-roots" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "macros"] }
time-tz = "2.0"
tokio = { version = "1.35", features=["full"] }
tokio-tungstenite={version= "0.21", features = ["rustls-tls-native-roots"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip=true
debug = false
