[package]
name = "mealpedant_backup_pi"
version = "0.2.1"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
repository = "https://www.github.com/mrjackwills/mealpedant_backup_pi"
description = "mealpedant backup pi client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
data-encoding = "2.9"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
mimalloc = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
